src/main/resources/gitea/traefik-middleware.yaml
# TODO: Review jem - 2022/07/26 - move this to provs?
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
