src/main/resources/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: default
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      name: gitea
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:1.16.9
          imagePullPolicy: IfNotPresent
          # config settings
          volumeMounts:
            - name: gitea-root-volume
              mountPath: "/var/lib/gitea"
            - name: gitea-data-volume
              mountPath: "/data"
          ports:
            - containerPort: 22
              name: git-ssh
            - containerPort: 3000
              name: gitea
      volumes:
        - name: gitea-root-volume
          persistentVolumeClaim:
            claimName: gitea-root-pvc
        - name: gitea-data-volume
          persistentVolumeClaim:
            claimName: gitea-data-pvc
