src/main/resources/gitea/service-ssh.yaml
kind: Service
apiVersion: v1
metadata:
  name: gitea-ssh-service
  namespace: default
  annotations: 
    metallb.universe.tf/allow-shared-ip: "shared-ip-service-group"
spec:
  type: LoadBalancer
  selector:
    app: gitea
  ports:
    - port: 2222
      targetPort: 22
      protocol: TCP
