src/main/resources/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gitea
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - FQDN
      secretName: gitea-cert
  rules:
    - host: FQDN
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gitea-service
                port:
                  number: 3000
